fix: markdown links contrast

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -79,6 +79,15 @@ dl.copyable{
     @include media-breakpoint-down(md) {
         width: 100%;
     }
+
+    a{
+        color: $primary;
+        text-decoration: underline;
+
+        &:hover{
+            text-decoration: none;
+        }
+    }
 }
 
 // Custom extras
